@@ -1,0 +1,5 @@
+@_: @('apple', 'bannana', 'cow') and apple and bannana
+@_: @('apple', 'bannana', 'cow') and x-ray and yak
+@_: @('aaa', 'bbb') and x-ray and yak
+@_: @('aaa', 'bbb') and XXX and YYY
+@_ is: @('aaa', 'bbb') and aaa and bbb
